feat: implement custom launcher and installer